syntax = "proto3";

package genesis;
option go_package = "github.com/oasislabs/ekiden/go/grpc/genesis";

service Genesis {
    rpc ToGenesis(GenesisRequest) returns (GenesisResponse) {}
}

message GenesisRequest {
    int64 height = 1;
}

message GenesisResponse {
    bytes json = 1;
}
